# PixelLock

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: rust.yml
src/: decrypt.rs  encrypt.rs  error_types.rs  main.rs  secret.rs  utils.rs
tests/: e2e_tests.rs
tests/files/: test_html.html  test_image.tiff  test_xlsx.xlsx
tests/images/: test_csv.csv  test_image.tiff  test_ods.ods
