[package]
name = "PixelLock"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash"] }
aes-gcm = "0.10.3" 
image = "0.25.6"
rand = "0.8.5"
clap = "4.5.4" 
rpassword = "7.4" 
zeroize = { version = "1.8.1", features = ["alloc"] }
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.10.1"
